fix: now the reversed column is only on mobile

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -4,13 +4,9 @@
     gap: 1.2em;
 }
 
-.action-container:nth-child(2) {
-    flex-direction: column-reverse;
-}
-
 @media screen and (max-width: 768px){
     .action-container {
-        flex-direction: column;
+        flex-direction: column-reverse;
         gap: 1.4em;
     }
 }
